# EngineDevelopment

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
source/: .gitignore
source/Application/: Application.cpp  Application.hpp
source/Components/: Component.inl  RenderableComponent.hpp  TransformableComponent.hpp
source/Entity/: EntityManager.hpp  EntityManager.inl
source/EventManagement/: EventManager.inl
source/ResourceManagement/: FileLoaders.hpp  ResourceCache.cpp  ResourceCache.hpp  ResourceContainers.cpp  ResourceContainers.hpp  ResourceHandle.cpp  ResourceHandle.hpp
source/Systems/: GuiSystem.cpp  GuiSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  System.hpp  SystemManager.inl
